Bump minimal Java version to 21+. Add unit tests